[project]
name = "reusable-functions"
version = "0.0.1"
description = "This package helps to push reusable functions to pypi"
authors = [
    {name = "y"}
]
license = {text = "No"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
